2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/Lighting/lighting_ui.c: add a control for
	viewpoint distance.  Should finish fixing bug #4044.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/NEWS
	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg.h
	* plug-ins/jpeg/jpeg_load.c
	* plug-ins/jpeg/jpeg_load.h
	* plug-ins/jpeg/jpeg_save.c
	* plug-ins/jpeg/jpeg_save.h: moved jpeg code into new
	dir and split up, already too large and a good bit more 
	will be needed for proper exif handling.
	
	* plug-ins/common/jpeg.c: removed

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/common/Makefile.am: changed accordingly

2005-01-01  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/tiff.c: Revert incorrect optimization from previous
	change.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/gradmap.c: added procedure plug_in_palettemap
	that does the same thing as gradmap except using the current
	palette; should resolve bug #68879.
	
2005-01-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/tiff.c: Special case 1-bit black & white indexed
	images to save out as 1-bit grayscale MINISWHITE tiffs. Also load
	these images as indexed images into GIMP. Fixes bug #150865.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell-callbacks.c: use a timeout for
	autoscrolling, to fix bug #8269.  Happy new year!

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpbrushcore.c
	* app/paint/gimppaintoptions.c
	* app/paint/gimppaintoptions.h
	* app/tools/gimppaintoptions-gui.c: reverted last change, and
	applied full patch from Dave Ahlswede in bug #149576.

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/gradient.pdb: added gradient-is-editable

	* tools/pdbgen/pdb/brush.pdb
	* tools/pdbgen/pdb/palette.pdb: changed mitch_misc to bill_misc
	where correct.

	* app/pdb/brush_cmds.c
	* app/pdb/palette_cmds.c