@@ -66,7 +66,6 @@ hot
 illusion
 iwarp
 jigsaw
-jpeg
 laplace
 lic
 mail
