@@ -1,3 +1,7 @@
+2005-01-02  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-12-29  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
